fixing learning div on mobile

--- a/src/styles/gears.css
+++ b/src/styles/gears.css
@@ -53,6 +53,6 @@
     z-index: 2;
 }
 .move{
-    position: relative;
+    /* position: relative; */
     top: 50px;
 }
